<resources>
    <string name="app_name">ChitChat</string>
    <string name="create_new_stack_pin">Create New Stack PIN</string>
    <string name="email">email</string>
    <string name="proceed">Proceed</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="contacts">Contacts</string>
    <string name="chat">CHAT</string>
    <string name="communication">Communication</string>
    <string name="rate">Rate</string>
    <string name="logout">Logout</string>
</resources>